# DnD

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: bot.py  main.py  pic.py
